Update title and add CV/transcript links
Updated the title and added links to CV and transcript.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Seljan Karimli — Galaxy Portfolio</title>
+  <title>Seljan Karimli</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -409,6 +409,10 @@
             <p class="text-sm font-extrabold tracking-[.22em] uppercase text-white/65">A message from Earth</p>
             <h2 class="mt-3 text-3xl md:text-5xl font-black neon neon-stroke">I AM SELJAN</h2>
           </div>
+<div class="mt-6 flex flex-wrap justify-center gap-3">
+  <a href="CV.pdf" target="_blank" class="btn btn-primary">Open CV</a>
+  <a href="transkript.pdf" target="_blank" class="btn">Open Transcript</a>
+</div>
 
           <div class="mt-10 flex justify-center">
             <div class="glass brackets rounded-2xl px-6 py-6 md:px-10 md:py-9 w-full max-w-3xl">
